// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CalculatorStepper component calls button events 1`] = `
Array [
  Array [
    Class {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "altKey": null,
      "bubbles": null,
      "button": null,
      "buttons": null,
      "cancelable": null,
      "clientX": null,
      "clientY": null,
      "ctrlKey": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "detail": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "metaKey": null,
      "movementX": [Function],
      "movementY": [Function],
      "nativeEvent": null,
      "pageX": null,
      "pageY": null,
      "relatedTarget": [Function],
      "screenX": null,
      "screenY": null,
      "shiftKey": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
      "view": null,
    },
  ],
]
`;

exports[`CalculatorStepper component calls button events 2`] = `
Array [
  Array [
    Class {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "altKey": null,
      "bubbles": null,
      "button": null,
      "buttons": null,
      "cancelable": null,
      "clientX": null,
      "clientY": null,
      "ctrlKey": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "detail": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "metaKey": null,
      "movementX": [Function],
      "movementY": [Function],
      "nativeEvent": null,
      "pageX": null,
      "pageY": null,
      "relatedTarget": [Function],
      "screenX": null,
      "screenY": null,
      "shiftKey": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
      "view": null,
    },
  ],
]
`;

exports[`CalculatorStepper component calls button events 3`] = `
Array [
  Array [
    SyntheticEvent {
      "_dispatchInstances": null,
      "_dispatchListeners": null,
      "_targetInst": null,
      "bubbles": null,
      "cancelable": null,
      "currentTarget": [Function],
      "defaultPrevented": null,
      "dispatchConfig": null,
      "eventPhase": null,
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": null,
      "nativeEvent": null,
      "target": null,
      "timeStamp": [Function],
      "type": null,
    },
    Object {},
  ],
]
`;

exports[`CalculatorStepper component ignores footer when there are no buttons 1`] = `
<div>
  <div
    class="CalculatorStepper"
  >
    <form
      class="Form form"
      data-testid="calculator-step-form"
    >
      <div
        class="formContent"
      >
        <h4
          class="MuiTypography-root step-title Typography MuiTypography-h4"
        >
          This is the 2nd page
        </h4>
        <h6
          class="MuiTypography-root computation Typography MuiTypography-h6"
        />
        <p
          class="MuiTypography-root subtitle Typography MuiTypography-body1"
        >
          Choose the closest to your roof shape
        </p>
        <div
          class="content"
        >
          <div>
            <p>
              This is the Selecting a Roof Shape page.
            </p>
          </div>
        </div>
        <hr
          class="MuiDivider-root hr"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`CalculatorStepper component renders as a div 1`] = `
<div>
  <div
    class="CalculatorStepper"
  >
    <div
      class="form--lg-padding stepWithoutForm"
    >
      <div
        class="formContent"
      >
        <h4
          class="MuiTypography-root step-title Typography MuiTypography-h4"
        >
          This is the 2nd page
        </h4>
        <h6
          class="MuiTypography-root computation Typography MuiTypography-h6"
        />
        <p
          class="MuiTypography-root subtitle Typography MuiTypography-body1"
        >
          Choose the closest to your roof shape
        </p>
        <div
          class="content"
        >
          <div>
            <p>
              This is the Selecting a Roof Shape page.
            </p>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <button
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-outlined footerButton MuiButton-outlinedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label buttonStyles-label-24"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-25 MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            Go Back
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div>
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-text buttonStyles-text-22 footerButton footerButton--link MuiButton-textPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label buttonStyles-label-24"
            >
              Skip
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-21 MuiButton-contained buttonStyles-contained-23 footerButton MuiButton-containedPrimary"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label buttonStyles-label-24"
            >
              Calculate
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CalculatorStepper component renders correctly 1`] = `
<div>
  <div
    class="CalculatorStepper"
  >
    <form
      class="Form form--lg-padding form"
      data-testid="calculator-step-form"
    >
      <div
        class="formContent"
      >
        <h4
          class="MuiTypography-root step-title Typography MuiTypography-h4"
        >
          This is the 2nd page
        </h4>
        <h6
          class="MuiTypography-root computation Typography MuiTypography-h6"
        />
        <p
          class="MuiTypography-root subtitle Typography MuiTypography-body1"
        >
          Choose the closest to your roof shape
        </p>
        <div
          class="content"
        >
          <div>
            <p>
              This is the Selecting a Roof Shape page.
            </p>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <button
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-outlined footerButton MuiButton-outlinedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label buttonStyles-label-4"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-5 MuiButton-iconSizeMedium"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                />
              </svg>
            </span>
            Go Back
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div>
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-text buttonStyles-text-2 footerButton footerButton--link MuiButton-textPrimary"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label buttonStyles-label-4"
            >
              Skip
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-contained buttonStyles-contained-3 footerButton MuiButton-containedPrimary"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label buttonStyles-label-4"
            >
              Calculate
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;
